--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
   background-image: url("../jj-ying-236821-unsplash.jpg");
   background-size: 200%;
   font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 h1 {
@@ -21,15 +23,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-article {
-  font-size: 18px;
-}
-
-h4 {
-  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .navigation {
@@ -48,7 +42,7 @@ h4 {
   margin-right: 5px;
   list-style: none;
   width: 100px;
-  height: 20px;
+  height: 30px;
   background: darkgrey;
   border-radius: 5px;
 }
