--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,29 @@
 }
 
 body {
-  background-image: url("../jj-ying-236821-unsplash.jpg");
-  background-size: 200%;
+  /*background-image: url("../jj-ying-236821-unsplash.jpg");
+  background-size: 200%;*/
   font-family: sans-serif;
   font-size: 18px;
   line-height: 1.5;
+  padding: 20px;
 }
 
 h1 {
   margin: 10px 0;
 }
 
-a,
-a:visited {
+.link__blue,
+.link__blue:visited {
   color: aliceblue;
   text-decoration: none;
 }
+
+.link__grey,
+.link__grey:visited {
+  color: darkgrey;
+}
+
 header {
   display: flex;
   flex-wrap: wrap;
@@ -90,4 +97,75 @@ header {
   border-radius: 5px;
   color: aliceblue;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 400px) {
+  .section-contact {
+    border: 1px solid;
+    grid-gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px 50px 50px;
+    align-items: center;
+    justify-items: center;
+  }
+  .contact__h3 {
+    grid-column: span 2;
+  }
+}
+
+.section-contact {
+  margin-bottom: 10px;
+  background-color: darkgrey;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 400px) {
+  .section-contact {
+    padding: 20px;
+  }
+}
+
+.section-findme {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+figcaption {
+  text-align: center;
+}
+
+@media screen and (min-width: 700px) {
+  .section-aboutme {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.75fr 1fr;
+    grid-gap: 10px;
+  }
+  .aboutme {
+    grid-row: span 2;
+  }
+}
+
+.aboutme {
+  text-align: justify;
+}
+
+.aboutme__list {
+  list-style: none;
+  font-size: 16px;
+}
+
+.aboutme__list li h4 {
+  margin: 5px 0;
+}
+
+.aboutme__list li:nth-child(2n) {
+  background: ;
+  border-top: 0.5px solid lightgray;
+  border-bottom: 0.5px solid lightgray;
+  background-color: rgba(100, 100, 100, 0.1);
 }
